Refactor code structure for improved readability and maintainability

--- a/tests/signer-archived.html
+++ b/tests/signer-archived.html
@@ -145,8 +145,8 @@
 </head>
 <body>
 
-    <div id="app-title">NIP-46 Signer</div>
-    <div id="status">Verbinde mit Relay...</div>
+    <div id="app-title">NIP-46 Signer nur für Dokumentationszwecke</div>
+    <div id="status">Bitte nicht mehr verwenden...</div>
 
     <div id="tab-nav">
         <button class="tab-btn active" id="tab-btn-signer" type="button">Signer</button>
