feat: implement modal unlock panel for password input and enhance overlay styles

--- a/signer.html
+++ b/signer.html
@@ -187,6 +187,7 @@
     </section>
 
     <div id="overlay" class="overlay"></div>
+    <div id="unlock-overlay" class="overlay"></div>
     <div id="auth-modal">
         <h3 id="request-title">Signier-Anfrage</h3>
         <p id="request-details"></p>
