feat: implement toggle functionality for request details in modal

--- a/signer.html
+++ b/signer.html
@@ -214,6 +214,7 @@
             <button class="btn-approve" id="allow-once-btn">Einmal erlauben</button>
             <button class="btn-allow-temporary" id="allow-always-btn">Immer erlauben</button>
             <button class="btn-reject" id="reject-btn">Ablehnen</button>
+            <button class="btn-neutral request-toggle-btn" id="toggle-request-details-btn" type="button" title="Event-Details ein-/ausblenden" aria-label="Event-Details ein- oder ausblenden">&#128065;</button>
         </div>
     </div>
     <div id="nsec-modal">
