feat: add test notification button and functionality for notification testing

--- a/signer.html
+++ b/signer.html
@@ -194,6 +194,7 @@
             <p id="attention-notification-state" class="attention-hint"></p>
             <div class="button-row">
                 <button class="btn-allow-temporary" id="attention-request-permission-btn" type="button">Benachrichtigungs-Recht anfragen</button>
+                <button class="btn-neutral" id="attention-test-notification-btn" type="button">Test-Benachrichtigung</button>
             </div>
             <hr style="border-color:#333; margin:14px 0;">
             <h4 style="margin:0 0 8px 0; color:#ffb4b4;">Notfallbereich</h4>
