feat: add initial implementation of demo Nostr client with Bunkerconnect integration
- Created index.html for the client UI with a layout for posting events and signer setup.
- Implemented index.js to handle client logic, including connection management, event posting, and signer interactions.
- Added nostr.js to manage NIP-46 signer integration and connection handling with relays.
- Included functionality for public key retrieval, event signing, and publishing.
- Established a dialog system for user interactions during signer setup and approval requests.

--- a/signer.html
+++ b/signer.html
@@ -68,6 +68,7 @@
                     <button class="secret-icon-btn" id="unlock-nsec-copy-btn" type="button" title="Kopieren" aria-label="nsec kopieren">&#128203;</button>
                     <button class="secret-icon-btn" id="unlock-generate-btn"  title="Neuen nsec generieren" type="button">🔑</button>
                 </div>
+                <p id="unlock-nsec-feedback" class="field-feedback"></p>
             </div>
             <div id="unlock-generate-row" class="button-row">
                 <h2>Zugangspasswort festlegen</h2>
