--- a/signer.html
+++ b/signer.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; connect-src 'self' https: wss:; style-src 'self' 'unsafe-inline'; img-src 'self' data:; font-src 'self' data:; frame-src 'self'; object-src 'none'; base-uri 'self'; form-action 'self';">
-    <meta name="theme-color" content="#121212">
+    <meta name="msapplication-TileColor" content="#121212">
     <meta name="application-name" content="NIP-46 Signer">
     <link rel="manifest" href="./manifest.webmanifest">
     <link rel="icon" href="./icons/icon-192.png" sizes="192x192" type="image/png">
@@ -289,4 +289,3 @@
         <script type="module" src="./signer-nip46.js"></script>
 </body>
 </html>
-
