- Implemented dynamic form handling with schema-based rendering in `democlient`. - Added new form generator module for rendering fields, collecting values, and validating input. - Introduced kind adapters for different event types, including kind:1 and kind:30023. - Enhanced form schema loading with support for remote and local schemas. - Updated `index.html` to include a new form fields container with `data-nostr` attributes. - Refactored `nostreclient.js` to support dynamic form submission flow. - Created JSON schemas for kind:1, kind:30023, and a NIP-52 calendar example. - Improved CSS styling for form fields to enhance layout and spacing.

--- a/democlient/index.html
+++ b/democlient/index.html
@@ -27,8 +27,10 @@
             </div>
 
             <form id="post-form" data-nostr="post-form" novalidate>
-                <label for="post-content">Content (kind:1)</label>
-                <textarea id="post-content" data-nostr="post-content" maxlength="280" placeholder="Hallo von meinem eigenen Nostr Client"></textarea>
+                <div id="form-fields" data-nostr="form-fields">
+                    <label for="post-content">Content (kind:1)</label>
+                    <textarea id="post-content" data-nostr="post-content" maxlength="280" placeholder="Hallo von meinem eigenen Nostr Client"></textarea>
+                </div>
                 <button id="send-btn" data-nostr="send-btn" type="submit" disabled>Signieren + senden</button>
             </form>
 
