feat: verbessere Passwort-Bestaetigung und Bridge-Timeout für wp-ensure-user-key; füge Diagnose-Logs hinzu

--- a/integrations/wordpress/nostr-identity-link/public/identity-link/index.html
+++ b/integrations/wordpress/nostr-identity-link/public/identity-link/index.html
@@ -91,6 +91,6 @@
         </section>
     </dialog>
 
-    <script type="module" src="./index.js?v=20260217d"></script>
+    <script type="module" src="./index.js?v=20260217i"></script>
 </body>
 </html>
