--- a/integrations/wordpress/nostr-identity-link/public/signer/index.html
+++ b/integrations/wordpress/nostr-identity-link/public/signer/index.html
@@ -286,6 +286,6 @@
         </div>
     </div>
 
-    <script type="module" src="./signer-nip46.js?v=20260217e"></script>
+    <script type="module" src="./signer-nip46.js?v=20260217g"></script>
 </body>
 </html>
