feat: implementiere Compare-First-Strategie für Identity-Link-Client; aktualisiere Dokumentation und Cache-Busting

--- a/integrations/wordpress/nostr-identity-link/public/identity-link/index.html
+++ b/integrations/wordpress/nostr-identity-link/public/identity-link/index.html
@@ -91,6 +91,6 @@
         </section>
     </dialog>
 
-    <script type="module" src="./index.js?v=20260217i"></script>
+    <script type="module" src="./index.js?v=20260217h"></script>
 </body>
 </html>
