- Refactored `waitForSignerBridgeReady()` to open the signer dialog on the first bridge error, improving user experience during reloads. - Updated `isReadySignerMessage()` to recognize additional readiness messages for better unlock flow. - Introduced `syncPublicConnectionInfo()` in the demo client to fetch public connection info without requiring user unlock. - Enhanced `resolveSignerResultFromBridge()` to prioritize public connection info retrieval, with a retry mechanism for improved reliability. - Updated cache handling for public connection info in both signer and demo client scripts to support compare-only flows. - Adjusted default behavior for "Stay Unlocked" option to session-based, reducing repeated password prompts. - Synchronized changes between embed clients and WordPress plugin to ensure consistent functionality across platforms. - Increased cache-busting versioning for affected files to ensure users receive the latest updates.

--- a/integrations/wordpress/nostr-identity-link/public/identity-link/index.html
+++ b/integrations/wordpress/nostr-identity-link/public/identity-link/index.html
@@ -12,7 +12,7 @@
         id="identity-link-root"
         class="layout"
         data-provider="wordpress"
-        data-signer-uri="../signer/"
+        data-signer-uri="../../signer.html"
         data-identity-endpoint="/wp-json/identity-link/v1/session"
         data-bind-endpoint="/wp-json/identity-link/v1/bind"
         data-rebind-endpoint="/wp-json/identity-link/v1/rebind"
@@ -91,6 +91,6 @@
         </section>
     </dialog>
 
-    <script type="module" src="./index.js?v=20260217h"></script>
+    <script type="module" src="./index.js"></script>
 </body>
 </html>
