feat: Implement WordPress backup functionality for encrypted key exports
- Added UI elements for saving and loading backups in WordPress.
- Introduced WordPress REST API endpoints for backup operations.
- Enhanced nonce handling for secure backup requests.
- Implemented logic to check and display backup status upon loading the signer.
- Improved error handling and user feedback during backup operations.
- Updated service worker to avoid caching WordPress API requests.
- Refactored key export and import processes to support WordPress backup.

--- a/integrations/wordpress/nostr-identity-link/public/signer/index.html
+++ b/integrations/wordpress/nostr-identity-link/public/signer/index.html
@@ -131,6 +131,17 @@
             </fieldset>
 
             <fieldset class="toolset">
+                <legend>WordPress Backup</legend>
+                <p>Speichert den verschlüsselten Export des aktiven Schlüssels im WordPress-Profil, damit du ihn in einem anderen Browser wiederherstellen kannst.</p>
+                <p class="attention-hint">Für Speichern und Laden ist ein eingeloggter WordPress-User mit gültigem WP-REST-Nonce erforderlich.</p>
+                <p id="wp-backup-state" class="attention-hint">Noch kein WordPress-Backup-Status geladen.</p>
+                <div class="button-row">
+                    <button class="btn-allow-temporary" id="save-key-wp-backup-btn" type="button">Export in WordPress speichern</button>
+                    <button class="btn-allow-temporary" id="load-key-wp-backup-btn" type="button">Aus WordPress wiederherstellen</button>
+                </div>
+            </fieldset>
+
+            <fieldset class="toolset">
                 <legend>Neuen Schlüssel hinzufügen</legend>
                 <label for="new-key-name-input">Neuer Schlüsselname (optional)</label>
                 <input id="new-key-name-input" placeholder="z.B. Phone Backup" />
@@ -286,6 +297,6 @@
         </div>
     </div>
 
-    <script type="module" src="./signer-nip46.js?v=20260217q"></script>
+    <script type="module" src="./signer-nip46.js?v=20260217z"></script>
 </body>
 </html>
